2008-01-23
 Added Subversion support.
 Added -cvs and -svn for selecting version detection preference.

2008-01-18
 Adjust to use Tile overall.
 Adjustments to new dirdiff processing.

2007-12-26
 Complete rework of directory diff window.
 Requires Tile.

2007-12-09
 Support command line "-" to read a patch from std input.

Release 2.3

2007-12-05
 Added option for wide map. (Code from Elliot)

2007-11-27
 Print line numbers in PDF regardless of number of digits.
 Try if anything from the command line is a kit. [FR 3806]

2007-09-25
 Always show at least one line in preprocess dialog.
 Started on GIT support. [FR 3736]
 Reorganising revision control implementation.
 Added -printpdf command line option.

Release 2.2

2007-03-31
 Fixed a bug that caused PS print not to run.
 Corrected a bug that made highlight of changes get misaligned.
 Initialise nonewline and autoclose earlier to make sure they work.

2007-02-24
 Added experimental -nonewline command option.

2007-02-23
 Added -close command option.

2007-02-17
 Added first version of PDF print.
 Kits are mounted readonly.

2007-01-29
 Finished dirdiff filters. [FR 3040]

2007-01-28
 Started on dirdiff filters.
 Added dirdiff preferences dialog. 

2007-01-09
 Document --query flag. [FR 3027]
 Smarter save in merge. [FR 2957]

2007-01-07
 Added commit button for CVS. [FR 2780]

2006-11-28
 Fixed dir diff window menu.

2006-10-17
 Improved patch file parsing.
 Improved font dialog.

Release 2.1

2006-05-22
 Added -n to cvs status, so write access is not necessary.
 Refactored print code to centralize enscript stuff.

2005-12-26
 Added -preprocess.  Fixed regsub -- bug.
 Made sure -nodigit is applied after -preprocess.

2005-09-29
 Added -foreach.

2005-09-28
 Detect kits and automatically mount them.
 Support relative -r with CVS.

2005-07-21
 Redesigned menus and toolbars.

2005-03-23
 Fixed -print option.
 Added -context option.

2005-02-20
 Fixed a bug when accessing a Clearcase file with a path.

2005-01-27