@@ -1,3 +1,6 @@
+2008-02-06
+ Fixed a bug in patch view. A change last in patch was missed.
+
 2008-01-23
  Added Subversion support.
  Added -cvs and -svn for selecting version detection preference.
